[workspace]
members = [
  "crates/ffpipeline",
  "crates/channel",
  "crates/lineup",
  "crates/playout",
]
resolver = "3"

[workspace.dependencies]
ffpipeline = { path = "crates/ffpipeline" }
ersatztv-playout = { path = "crates/playout" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
